# art

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
backend/art/: models.py  serializers.py  tests.py  urls.py  views.py
backend/art/management/commands/: import-artist.py  import.py
backend/art/migrations/: 0001_init.py  0001_initial.py  0002_artwork_fields_optional.py
backend/core/: settings.py  urls.py
frontend/: Dockerfile  README.md  docker-entrypoint.sh  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.module.ts
frontend/src/app/artist/: artist-routing.module.ts  artist.module.ts
frontend/src/app/artist/artist-list/: .artist-list.component.html.swp  artist-list.component.html  artist-list.component.scss  artist-list.component.spec.ts  artist-list.component.ts
frontend/src/app/artwork/: artwork-routing.module.ts  artwork.module.ts
frontend/src/app/artwork/artwork-card/: artwork-card.component.html  artwork-card.component.scss  artwork-card.component.spec.ts  artwork-card.component.ts
frontend/src/app/artwork/artwork-display/: artwork-display.component.html  artwork-display.component.scss  artwork-display.component.spec.ts  artwork-display.component.ts  (+2 more)
frontend/src/app/models/: index.ts
frontend/src/app/services/: artist.service.spec.ts  artist.service.ts  artwork.service.spec.ts  artwork.service.ts
frontend/src/app/shared/: shared.module.ts
(+7 files in other folders)
