[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["VD"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.4"
djangorestframework = "^3.12.2"

[tool.poetry.dev-dependencies]
factory_boy = "^3.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
